--- a/theme/exited.html
+++ b/theme/exited.html
@@ -1,325 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Excited Mode — Burst of Joy</title>
-  <style>
-    :root {
-      --bg1: #ff9d00;
-      --bg2: #ff0057;
-      --bg3: #7afcff;
-      --bg4: #9bffbc;
-    }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Excited Fireworks Theme</title>
+<style>
+  body.theme-active {
+    background: linear-gradient(180deg, #0b0c29, #302b63, #24243e);
+    overflow: hidden;
+    transition: background 0.5s ease;
+  }
 
-    html,
-    body {
-      height: 100%;
-      margin: 0;
-      font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial;
-    }
-
-    body {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: radial-gradient(1200px 600px at 10% 20%, #ffd7a8 0%, transparent 25%),
-        radial-gradient(1000px 600px at 90% 80%, #ff9ad9 0%, transparent 20%),
-        linear-gradient(135deg, var(--bg1), var(--bg2));
-      overflow: hidden;
-      color: #fff;
-    }
-
-    /* canvas sits behind the UI */
-    #stage {
-      position: fixed;
-      inset: 0;
-      z-index: 0;
-      display: block;
-      touch-action: none;
-    }
-
-    .ui {
-      position: relative;
-      z-index: 5;
-      text-align: center;
-      pointer-events: none;
-      width: 100%;
-      padding: 32px 16px;
-      box-sizing: border-box;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 12px;
-    }
-
-    h1 {
-      margin: 0;
-      font-size: clamp(22px, 4vw, 44px);
-      font-weight: 800;
-      text-shadow: 0 6px 30px rgba(0, 0, 0, 0.25);
-      pointer-events: auto;
-    }
-
-    p {
-      margin: 0;
-      opacity: 0.95;
-      pointer-events: auto;
-    }
-
-    .hint {
-      margin-top: 8px;
-      pointer-events: auto;
-      background: rgba(255, 255, 255, 0.12);
-      color: #fff;
-      padding: 8px 14px;
-      border-radius: 999px;
-      font-weight: 600;
-      backdrop-filter: blur(6px);
-    }
-
-    /* small footer control */
-    .controls {
-      position: fixed;
-      right: 12px;
-      bottom: 12px;
-      z-index: 10;
-      display: flex;
-      gap: 8px;
-    }
-
-    .btn {
-      pointer-events: auto;
-      background: rgba(255, 255, 255, 0.14);
-      border: 0;
-      color: #fff;
-      padding: 8px 12px;
-      border-radius: 999px;
-      font-weight: 700;
-      cursor: pointer;
-      box-shadow: 0 6px 18px rgba(0, 0, 0, 0.12);
-    }
-
-    .btn:active {
-      transform: translateY(1px);
-    }
-
-    /* responsive tweaks */
-    @media (max-width:480px) {
-      .controls {
-        right: 8px;
-        bottom: 8px;
-      }
-
-      h1 {
-        font-size: 20px;
-      }
-    }
-  </style>
+  .firework {
+    position: fixed;
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    opacity: 0.95;
+  }
+</style>
 </head>
-
 <body>
 
-  <canvas id="stage"></canvas>
+<script>
+function startTheme() {
+  document.body.classList.add('theme-active');
+  window.__themeIntervals = window.__themeIntervals || [];
 
-  <div class="ui">
-    <h1>✨ Burst of Joy</h1>
-    <p>Click or tap anywhere — bursts of color celebrate your excitement!</p>
-    <div class="hint">Tap repeatedly for bigger bursts • Try dragging to paint trails</div>
-  </div>
+  function burstFirework(e) {
+    const COLORS = ['#ff3c3c','#ffd93c','#3cff7f','#3c9fff','#e03cff'];
+    const burstCount = 30 + Math.floor(Math.random()*20);
 
-  <div class="controls" aria-hidden>
-    <button id="clearBtn" class="btn">Clear</button>
-    <button id="toggleSound" class="btn">Sound: On</button>
-  </div>
+    for(let i=0;i<burstCount;i++){
+      const el = document.createElement('div');
+      el.className = 'firework';
+      el.style.left = e.clientX + 'px';
+      el.style.top = e.clientY + 'px';
+      el.style.background = COLORS[Math.floor(Math.random()*COLORS.length)];
+      document.body.appendChild(el);
 
-  <script>
-    /* Excited Mode — working fireworks canvas
-       - handles DPR for crisp rendering
-       - uses pointer events for desktop + touch
-       - preloads audio and handles blocked autoplay
-       - efficient particle lifetime handling
-    */
+      // random angle & speed for radial burst
+      const angle = Math.random() * Math.PI*2;
+      const speed = Math.random()*6 + 3;
+      const vx = Math.cos(angle)*speed;
+      const vy = Math.sin(angle)*speed;
 
-    const canvas = document.getElementById('stage');
-    const ctx = canvas.getContext('2d', { alpha: true });
-    let DPR = Math.max(1, window.devicePixelRatio || 1);
-
-    function resize() {
-      DPR = Math.max(1, window.devicePixelRatio || 1);
-      canvas.width = Math.floor(window.innerWidth * DPR);
-      canvas.height = Math.floor(window.innerHeight * DPR);
-      canvas.style.width = window.innerWidth + 'px';
-      canvas.style.height = window.innerHeight + 'px';
-      ctx.setTransform(DPR, 0, 0, DPR, 0, 0);
-    }
-    window.addEventListener('resize', resize);
-    resize();
-
-    /* Particle system */
-    const particles = [];
-    const trails = []; // for cursor trail (optional)
-
-    const COLORS = ['#ff0057', '#ffea00', '#00ffd0', '#ff9100', '#ff66c4', '#9bffbc', '#7afcff'];
-
-    function rand(min, max) { return Math.random() * (max - min) + min; }
-
-    class Particle {
-      constructor(x, y, color, speedMul = 1) {
-        this.x = x; this.y = y;
-        const angle = Math.random() * Math.PI * 2;
-        const speed = rand(2, 8) * speedMul;
-        this.vx = Math.cos(angle) * speed;
-        this.vy = Math.sin(angle) * speed;
-        this.size = rand(2, 5);
-        this.color = color || COLORS[Math.floor(Math.random() * COLORS.length)];
-        this.life = 1; // 1 -> 0
-        this.decay = rand(0.015, 0.035);
-        this.gravity = 0.06 * rand(0.6, 1.3);
-        this.rotation = Math.random() * Math.PI * 2;
-        this.spin = rand(-0.12, 0.12);
-      }
-      update(dt) {
-        this.vy += this.gravity * dt * 0.6;
-        this.x += this.vx * dt;
-        this.y += this.vy * dt;
-        this.rotation += this.spin * dt;
-        this.life -= this.decay * dt;
-      }
-      draw(ctx) {
-        ctx.save();
-        ctx.translate(this.x, this.y);
-        ctx.rotate(this.rotation);
-        ctx.globalAlpha = Math.max(0, this.life);
-        ctx.fillStyle = this.color;
-        // small rounded rectangle for variety
-        ctx.beginPath();
-        ctx.roundRect ? ctx.roundRect(-this.size / 2, -this.size / 2, this.size, this.size, this.size * 0.35) :
-          ctx.rect(-this.size / 2, -this.size / 2, this.size, this.size);
-        ctx.fill();
-        ctx.restore();
-      }
-    }
-
-    /* helper to spawn a firework burst */
-    function spawnBurst(x, y, power = 1.0) {
-      const base = Math.floor(30 * power) + Math.floor(Math.random() * 30);
-      for (let i = 0; i < base; i++) {
-        const p = new Particle(x, y, COLORS[Math.floor(Math.random() * COLORS.length)], rand(0.6, 1.4) * power);
-        particles.push(p);
-      }
-    }
-
-    /* pointer handling */
-    let isPointerDown = false;
-    let lastPointer = null;
-    let pointerTimer = 0;
-
-    function onPointerDown(e) {
-      isPointerDown = true;
-      const x = e.clientX || (e.touches && e.touches[0].clientX);
-      const y = e.clientY || (e.touches && e.touches[0].clientY);
-      spawnBurst(x, y, 1.6);
-      playSound();
-      lastPointer = { x, y, t: performance.now() };
-    }
-    function onPointerMove(e) {
-      if (!isPointerDown) return;
-      const x = e.clientX || (e.touches && e.touches[0].clientX);
-      const y = e.clientY || (e.touches && e.touches[0].clientY);
-      // spawn smaller bursts while dragging
-      spawnBurst(x, y, 0.45);
-      lastPointer = { x, y, t: performance.now() };
-    }
-    function onPointerUp(e) {
-      isPointerDown = false;
-    }
-    canvas.addEventListener('pointerdown', onPointerDown, { passive: true });
-    canvas.addEventListener('pointermove', onPointerMove, { passive: true });
-    window.addEventListener('pointerup', onPointerUp, { passive: true });
-
-    /* animation loop */
-    let last = performance.now();
-    function frame(now) {
-      const dt = Math.min(60, now - last) / 16.666; // normalise so 60fps -> dt ~1
-      last = now;
-
-      // fade canvas slightly to create trailing effect
-      ctx.fillStyle = 'rgba(8,6,12,0.12)';
-      ctx.fillRect(0, 0, canvas.width / DPR, canvas.height / DPR);
-
-      // update & draw particles
-      for (let i = particles.length - 1; i >= 0; i--) {
-        const p = particles[i];
-        p.update(dt);
-        p.draw(ctx);
-        if (p.life <= 0 || p.x < -50 || p.x > canvas.width / DPR + 50 || p.y > canvas.height / DPR + 80) {
-          particles.splice(i, 1);
+      let life = 0;
+      const duration = 60; // frames (~1s)
+      function animate(){
+        if(life>=duration){
+          el.remove();
+          return;
         }
+        el.style.left = (e.clientX + vx*life) + 'px';
+        el.style.top = (e.clientY + vy*life) + 'px';
+        el.style.opacity = (1 - life/duration);
+        life++;
+        requestAnimationFrame(animate);
       }
-
-      requestAnimationFrame(frame);
+      animate();
     }
-    requestAnimationFrame(frame);
+  }
 
-    /* Audio (preload + user gesture handling) */
-    let SOUND_ON = true;
-    const popBuffer = new Audio('https://cdn.pixabay.com/download/audio/2022/03/15/audio_b4b2ecb1a8.mp3?filename=firework-1-11297.mp3');
-    popBuffer.preload = 'auto';
-    popBuffer.volume = 0.45;
+  window.__themeClick = burstFirework;
+  document.addEventListener('click', window.__themeClick);
+}
 
-    function playSound() {
-      if (!SOUND_ON) return;
-      try {
-        const a = popBuffer.cloneNode();
-        a.volume = 0.55;
-        a.play().catch(() => {/* autoplay blocked until user interacts; ignore */ });
-      } catch (e) { }
-    }
-
-    /* controls */
-    document.getElementById('clearBtn').addEventListener('click', () => {
-      particles.length = 0;
-      // clear canvas fully
-      ctx.clearRect(0, 0, canvas.width / DPR, canvas.height / DPR);
-    });
-    const sBtn = document.getElementById('toggleSound');
-    sBtn.addEventListener('click', () => {
-      SOUND_ON = !SOUND_ON;
-      sBtn.textContent = SOUND_ON ? 'Sound: On' : 'Sound: Off';
-    });
-
-    /* small accessibility: allow spacebar to trigger burst at center */
-    window.addEventListener('keydown', (e) => {
-      if (e.code === 'Space') {
-        spawnBurst(window.innerWidth / 2, window.innerHeight / 2, 1.4);
-        playSound();
-      }
-    });
-
-    /* polyfill for roundRect on older browsers */
-    if (!CanvasRenderingContext2D.prototype.roundRect) {
-      CanvasRenderingContext2D.prototype.roundRect = function (x, y, w, h, r) {
-        if (w < 2 * r) r = w / 2;
-        if (h < 2 * r) r = h / 2;
-        this.beginPath();
-        this.moveTo(x + r, y);
-        this.arcTo(x + w, y, x + w, y + h, r);
-        this.arcTo(x + w, y + h, x, y + h, r);
-        this.arcTo(x, y + h, x, y, r);
-        this.arcTo(x, y, x + w, y, r);
-        this.closePath();
-        return this;
-      }
-    }
-
-    /* debugging helper (uncomment if you need console info)
-    setInterval(()=>{
-      console.log('particles:', particles.length);
-    },2000);
-    */
-  </script>
+function stopTheme() {
+  document.body.classList.remove('theme-active');
+  if(window.__themeClick){
+    document.removeEventListener('click', window.__themeClick);
+    window.__themeClick = null;
+  }
+  document.querySelectorAll('.firework').forEach(e=>e.remove());
+}
+</script>
 </body>
-
 </html>
