--- a/theme/love.html
+++ b/theme/love.html
@@ -2,150 +2,111 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Love Emotion Theme</title>
 <style>
-    body {
-        margin: 0;
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        overflow: hidden;
-        font-family: Poppins, sans-serif;
-        background: url("https://www.shutterstock.com/image-photo/magenta-color-heartshaped-bokeh-background-260nw-372605200.jpg") no-repeat center/cover;
-        /* animation: romanticGlow 6s ease-in-out infinite alternate; */
-    }
-
-    @keyframes romanticGlow {
-      0% { filter: brightness(0.85) saturate(1.1); }
-      100% { filter: brightness(1.05) saturate(1.4); }
-    }
-
-    .bubble {
-        position: absolute;
-        bottom: -100px;
-        font-size: 30px; 
-        animation: floatUp 6s linear infinite;
-        opacity: 0.5;
-    }
-
-    @keyframes floatUp {
-        0% { transform: translateY(0) scale(1); opacity: .9; }
-        100% { transform: translateY(-120vh) scale(1.6); opacity: 0; }
-    }
-
-    /* .title {
-        position: absolute;
-        font-size: 40px;
-        font-weight: 600;
-        color: #000000;
-        text-shadow: 0px 4px 18px rgba(0, 0, 0, 0.8);
-        animation: heartbeat 2s infinite;
-    }
-
-    @keyframes heartbeat {
-      0%, 100% { transform: scale(1); }
-      50% { transform: scale(1.15); }
-    } */
-
-    /* 🌈 Responsive Design — Works for all Emotion Themes */
-
-/* Tablets and smaller laptops */
-@media (max-width: 1024px) {
-  h1 {
-    font-size: 2.2rem;
-    margin-top: 2rem;
-  }
-  .center-glow {
-    width: 300px;
-    height: 300px;
-  }
-  .bubble {
-    font-size: 1.4rem;
-  }
-}
-
-/* Mobile devices */
-@media (max-width: 768px) {
-  body {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  body.theme-active {
+    background: linear-gradient(135deg, #ff9ccf, #ff6fa3, #ffdde1);
     overflow: hidden;
-  }
-
-  h1 {
-    font-size: 1.6rem;
-    padding: 0 10px;
-    line-height: 1.3;
-    text-align: center;
-  }
-
-  .center-glow {
-    width: 200px;
-    height: 200px;
-    filter: blur(40px);
+    transition: background 0.5s ease;
   }
 
   .bubble {
-    font-size: 1.2rem;
-    animation-duration: 5s !important;
+    position: absolute;
+    bottom: -100px;
+    font-size: 30px; 
+    animation: floatUp 6s linear infinite;
+    opacity: 0.5;
   }
 
-  .spark {
-    width: 3px;
-    height: 3px;
+  @keyframes floatUp {
+    0% { transform: translateY(0) scale(1); opacity: .9; }
+    100% { transform: translateY(-120vh) scale(1.6); opacity: 0; }
   }
 
-  .firework {
-    width: 3px;
-    height: 3px;
+  .heart {
+    position: fixed;
+    width: 16px;
+    height: 16px;
+    transform: rotate(-45deg);
+    background-color: red;
+    clip-path: polygon(50% 0%, 100% 35%, 80% 100%, 50% 75%, 20% 100%, 0 35%);
+    opacity: 0.95;
+    pointer-events: none;
   }
-}
-
-/* Small phones */
-@media (max-width: 480px) {
-  h1 {
-    font-size: 1.2rem;
-  }
-
-  .center-glow {
-    width: 150px;
-    height: 150px;
-  }
-
-  .bubble {
-    font-size: 1rem;
-  }
-}
-
 </style>
 </head>
-
 <body>
 
-<!-- <div class="title">Love Mode Activated</div> -->
-
 <script>
-function createBubble() {
+function startTheme() {
+  document.body.classList.add('theme-active');
+  window.__themeIntervals = window.__themeIntervals || [];
+
+  // Floating bubbles
+  function createBubble() {
     const bubble = document.createElement("div");
-    
     const loveEmojis = ["❤️","💕","💞","💗","💓","💘","💖","😍","🥰"];
     bubble.textContent = loveEmojis[Math.floor(Math.random() * loveEmojis.length)];
-
     bubble.classList.add("bubble");
     bubble.style.left = Math.random() * 100 + "vw";
     bubble.style.fontSize = (25 + Math.random() * 25) + "px";
     bubble.style.animationDuration = (6 + Math.random() * 3) + "s";
-
     document.body.appendChild(bubble);
-
     setTimeout(() => bubble.remove(), 7000);
+  }
+  window.__themeIntervals.push(setInterval(createBubble, 700));
+
+  // Click bursts
+  function createBurst(e) {
+    const COLORS = ['#ff3c6b','#ff66a3','#ffb6c1','#ff4d94'];
+    const count = 15 + Math.floor(Math.random()*10);
+
+    for(let i=0;i<count;i++){
+      const el = document.createElement('div');
+      el.className = 'heart';
+      el.style.left = e.clientX + 'px';
+      el.style.top = e.clientY + 'px';
+      el.style.background = COLORS[Math.floor(Math.random()*COLORS.length)];
+      document.body.appendChild(el);
+
+      const angle = (Math.random()*Math.PI/2) - Math.PI/4; // upward spread
+      const speed = Math.random()*3 + 2;
+      let life = 0;
+      const duration = 80;
+
+      function animate(){
+        if(life>=duration){ el.remove(); return; }
+        el.style.left = (e.clientX + Math.cos(angle)*speed*life) + 'px';
+        el.style.top = (e.clientY - Math.sin(angle)*speed*life - life*0.5) + 'px';
+        el.style.opacity = 1 - life/duration;
+        el.style.transform = `rotate(${ -45 + life*2 }deg)`;
+        life++;
+        requestAnimationFrame(animate);
+      }
+      animate();
+    }
+  }
+
+  window.__themeClick = createBurst;
+  document.addEventListener('click', window.__themeClick);
 }
 
-// Create bubbles fast & continuously
-setInterval(createBubble, 700);
-createBubble();
+function stopTheme() {
+  document.body.classList.remove('theme-active');
+  if(window.__themeIntervals){
+    window.__themeIntervals.forEach(i=>clearInterval(i));
+    window.__themeIntervals = [];
+  }
+  if(window.__themeClick){
+    document.removeEventListener('click', window.__themeClick);
+    window.__themeClick = null;
+  }
+  document.querySelectorAll('.bubble, .heart').forEach(e=>e.remove());
+}
+
+// auto-start
+startTheme();
 </script>
 
 </body>
