--- a/theme/neutral.html
+++ b/theme/neutral.html
@@ -1,70 +1,89 @@
-
-
-
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Neutral Emotion Theme ⚪</title>
-<style>
-  * { margin: 0; padding: 0; box-sizing: border-box; }
-
-  body {
-    height: 100vh;
-    overflow: hidden;
-    justify-content: center;
-    display: flex;
-    align-items: center;
-    background: url("https://static.vecteezy.com/system/resources/thumbnails/017/396/220/small/fashion-style-template-with-abstract-shapes-in-pastel-and-plant-colors-neutral-background-with-minimalistic-theme-vector.jpg") no-repeat center/cover;
-    font-family: 'Poppins', sans-serif;
-    position: relative;
-
-
-  }
-  /* h1 {
-    color: #2f3640;
-    font-size: clamp(2rem, 5vw, 3rem);
-    text-shadow: 0 0 8px rgba(255,255,255,0.6);
-    opacity: 0.9;
-    animation: fadeIn 2s ease forwards;
-    z-index: 10;
-  } */
-
-  @keyframes fadeIn {
-    0% { opacity: 0; transform: scale(0.9); }
-    100% { opacity: 1; transform: scale(1); }
-  }
-
-  /* Floating Orbs ⚪ */
-  .orb {
-    position: absolute;
-    border-radius: 50%;
-    background: radial-gradient(circle at 30% 30%, rgb(255, 226, 186), rgba(200, 200, 200, 0.3));
-    box-shadow: 0 0 20px rgba(255,255,255,0.5);
-    opacity: 0.7;
-    animation: floatOrb 10s ease-in-out forwards;
-    bottom: 0;
-  }
-
-  @keyframes floatOrb {
-    0% { transform: translateY(0) scale(0.9); opacity: 0.5; }
-    50% { transform: translateY(-50vh) scale(1); opacity: 0.8; }
-    100% { transform: translateY(-100vh) scale(1.1); opacity: 0; }
-  }
-
-  
-  @media (max-width: 600px) {
-    h1 {
-      font-size: 2rem;
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Neutral Emotion Theme ⚪</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
     }
-  }
-</style>
+
+    body {
+      height: 100vh;
+      overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-family: 'Poppins', sans-serif;
+      position: relative;
+      background: url("https://static.vecteezy.com/system/resources/thumbnails/017/396/220/small/fashion-style-template-with-abstract-shapes-in-pastel-and-plant-colors-neutral-background-with-minimalistic-theme-vector.jpg") no-repeat center/cover;
+      background-size: 100% 100%;
+    }
+    /* Floating Orbs ⚪ */
+    .orb {
+      position: absolute;
+      border-radius: 50%;
+      background: radial-gradient(circle at 30% 30%, #e3e383, rgba(200, 200, 200, 0.3));
+      box-shadow: 0 0 25px rgba(255, 255, 255, 0.4);
+      opacity: 0.7;
+      animation: floatOrb 12s ease-in-out forwards;
+      bottom: 0;
+      pointer-events: none;
+    }
+
+    @keyframes floatOrb {
+      0% {
+        transform: translateY(0) scale(0.9);
+        opacity: 0.5;
+      }
+
+      50% {
+        transform: translateY(-50vh) scale(1);
+        opacity: 0.8;
+      }
+
+      100% {
+        transform: translateY(-100vh) scale(1.1);
+        opacity: 0;
+      }
+    }
+
+    /* Soft glows for extra calm effect */
+    .glow {
+      position: absolute;
+      width: 200px;
+      height: 200px;
+      background: radial-gradient(circle, rgba(255, 255, 255, 0.15), transparent);
+      border-radius: 50%;
+      filter: blur(40px);
+      top: 30%;
+      left: 50%;
+      transform: translateX(-50%);
+      animation: pulseGlow 6s ease-in-out infinite alternate;
+      pointer-events: none;
+    }
+
+    @keyframes pulseGlow {
+      0% {
+        transform: translateX(-50%) scale(0.9);
+        opacity: 0.5;
+      }
+
+      100% {
+        transform: translateX(-50%) scale(1.1);
+        opacity: 0.8;
+      }
+    }
+  </style>
 </head>
+
 <body>
-  <div class="wave"></div>
-  <!-- <h1> Feeling Neutral</h1> -->
+
+  <div class="glow"></div>
 
   <script>
     // Floating orbs
@@ -74,16 +93,14 @@
       const size = Math.random() * 50 + 30;
       orb.style.width = orb.style.height = size + "px";
       orb.style.left = Math.random() * 100 + "vw";
-      orb.style.animationDuration = (8 + Math.random() * 4) + "s";
+      orb.style.animationDuration = (8 + Math.random() * 6) + "s";
       document.body.appendChild(orb);
-      setTimeout(() => orb.remove(), 12000);
+      setTimeout(() => orb.remove(), 15000);
     }
 
-    window.onload = () => {
-      setInterval(createOrb, 600);
-    };
+    // Continuous creation
+    setInterval(createOrb, 600);
   </script>
 </body>
+
 </html>
-
-
