--- a/theme/sad.html
+++ b/theme/sad.html
@@ -1,192 +1,79 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Sad Mood Theme + Piano Sound</title>
-
 <style>
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
-  font-family:"Poppins", sans-serif;
-}
-
-/* Sad background */
-body {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: url("https://static.vecteezy.com/system/resources/thumbnails/038/997/757/small/ai-generated-rainy-window-with-blurry-city-lights-in-the-background-at-sunset-bokeh-out-of-focus-blur-cold-weather-melancholic-mood-golden-hour-sunrays-longing-concept-backdrop-photo.jpg") no-repeat center/cover;
-  overflow:hidden;
-}
-
-@keyframes sadBG {
-  0% {background-position: 0% 50%;}
-  50% {background-position: 100% 50%;}
-  100% {background-position: 0% 50%;}
-}
-
-/* Emojis */
-.emoji {
-  font-size: 38px;
-  position: absolute;
-  animation: float 4s infinite ease-in-out;
-  opacity: 0.85;
-}
-
-@keyframes float {
-  0% {transform: translateY(0px);}
-  50% {transform: translateY(-20px);}
-  100% {transform: translateY(0px);}
-}
-
-/* Mood card */
-/* .mood-box {
-  background: rgba(255,255,255,0.2);
-  padding: 35px;
-  border-radius: 22px;
-  text-align: center;
-  box-shadow: 0 12px 35px rgba(0,0,0,0.25);
-  backdrop-filter: blur(15px);
-  animation: fadeIn 1.6s ease;
-  z-index:5;
-  border:1px solid rgba(255,255,255,0.3);
-}
-
-@keyframes fadeIn {
-  from {opacity:0; transform:scale(0.9);}
-  to {opacity:1; transform:scale(1);}
-}
-
-.mood-emoji {font-size: 65px; margin-bottom: 12px;}
-.mood-text {font-size: 26px; font-weight: 600; color: #e2ecff;text-shadow: 2px 3px 4px black;} */
-
-/* Rain drops */
-.drop {
-  position: absolute;
-  border-radius: 50%;
-  background: rgba(255, 255, 255, 0.434);
-  width: 8px;
-  height: 15px;
-  animation: rain 2s infinite linear;
-  filter: blur(1px);
-  top: 0;
-}
-
-@keyframes rain {
-  0% {transform: translateY(-50px) scale(1);}
-  100% {transform: translateY(120vh) scale(0.8);}
-}
-
-
-
-
-/* 🌈 Responsive Design — Works for all Emotion Themes */
-
-/* Tablets and smaller laptops */
-@media (max-width: 1024px) {
-  h1 {
-    font-size: 2.2rem;
-    margin-top: 2rem;
-  }
-  .center-glow {
-    width: 300px;
-    height: 300px;
-  }
-  .bubble {
-    font-size: 1.4rem;
-  }
-}
-
-/* Mobile devices */
-@media (max-width: 768px) {
-  body {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
+  body.theme-active {
+    background: linear-gradient(120deg, #3a5f9e, #5c7db8, #aac0e0);
+    background-size: 200% 200%;
+    animation: sadMove 9s ease-in-out infinite;
   }
 
-  h1 {
-    font-size: 1.6rem;
-    padding: 0 10px;
-    line-height: 1.3;
-    text-align: center;
+  @keyframes sadMove {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
   }
 
-  .center-glow {
-    width: 200px;
-    height: 200px;
-    filter: blur(40px);
-  }
-  
-  .bubble {
-    font-size: 1.2rem;
-    animation-duration: 5s !important;
-  }
-
-  .spark {
-    width: 3px;
-    height: 3px;
+  .raindrop {
+    position: fixed;
+    top: -5%;
+    width: 4px;
+    height: 16px;
+    opacity: 0.6;
+    border-radius: 2px;
+    background: rgba(255,255,255,0.4);
+    transform: rotate(5deg);
+    animation: raindropFall 3s linear forwards;
   }
 
-  .firework {
-    width: 3px;
-    height: 3px;
-  }
-}
-
-/* Small phones */
-@media (max-width: 480px) {
-  h1 {
-    font-size: 1.2rem;
+  @keyframes raindropFall {
+    0% { transform: translateY(0) rotate(0deg); opacity: 0.6; }
+    100% { transform: translateY(120vh) rotate(180deg); opacity: 0; }
   }
 
-  .center-glow {
-    width: 150px;
-    height: 150px;
+  .glow {
+    position: fixed;
+    border-radius: 50%;
+    filter: blur(12px);
+    opacity: 0.5;
+    background: radial-gradient(circle, rgba(255,255,255,0.6), rgba(255,255,255,0.05));
   }
-
-  .bubble {
-    font-size: 1rem;
-  }
-}
-
 </style>
-</head>
 
-<body>
+<div id="theme-animation-container"></div>
 
-<!-- Emojis -->
-<div class="emoji" style="top:12%; left:6%;">😢</div>
-<div class="emoji" style="top:20%; right:12%; animation-delay:0.5s;">💧</div>
-<div class="emoji" style="bottom:18%; left:15%; animation-delay:1s;">🥺</div>
-<div class="emoji" style="bottom:28%; right:20%; animation-delay:1.5s;">🌧️</div>
-
-<!-- Rain -->
 <script>
-for(let i=0;i<35;i++){
-  let drop=document.createElement("div");
-  drop.className="drop";
-  drop.style.left=Math.random()*100+"%";
-  drop.style.animationDelay=Math.random()*2+"s";
-  drop.style.opacity=(0.2+Math.random()*0.5).toFixed(2);
-  drop.style.transform=`scale(${0.8 + Math.random()*0.4})`;
-  document.body.appendChild(drop);
-}
+  function startTheme() {
+    document.body.classList.add('theme-active');
+    window.__themeIntervals = window.__themeIntervals || [];
+
+    function createRaindrop() {
+      const el = document.createElement('div');
+      el.className = 'raindrop';
+      el.style.left = Math.random() * 100 + 'vw';
+      el.style.height = (12 + Math.random() * 10) + 'px';
+      el.style.animationDuration = (2 + Math.random() * 1.5) + 's';
+      document.body.appendChild(el);
+      setTimeout(() => el.remove(), 3500);
+    }
+
+    function createGlow() {
+      const el = document.createElement('div');
+      el.className = 'glow';
+      const size = Math.random() * 100 + 60;
+      el.style.width = el.style.height = size + 'px';
+      el.style.left = Math.random() * 100 + 'vw';
+      el.style.top = Math.random() * 100 + 'vh';
+      document.body.appendChild(el);
+      setTimeout(() => el.remove(), 7000);
+    }
+
+    window.__themeIntervals.push(setInterval(createRaindrop, 200));
+    window.__themeIntervals.push(setInterval(createGlow, 1200));
+  }
+
+  function stopTheme() {
+    if (window.__themeIntervals) {
+      window.__themeIntervals.forEach(i => clearInterval(i));
+      window.__themeIntervals = [];
+    }
+    document.body.classList.remove('theme-active');
+  }
 </script>
-
-<!-- Mood Card -->
-<!-- <div class="mood-box">
-  <div class="mood-emoji">😢</div>
-  <div class="mood-text">You're feeling Sad...</div>
-</div> -->
-
-
-</script>
-
-</body>
-</html>
