--- a/games.html
+++ b/games.html
@@ -73,9 +73,9 @@
     <div
       class="bg-white/50 backdrop-blur-md rounded-2xl shadow-lg p-5 flex flex-col items-center text-center hover:scale-105 transition duration-300">
       <div class="text-5xl mb-3">🫧</div>
-      <h3 class="text-base font-bold mb-1">Bubble Pop Calm</h3>
+      <h3 class="text-base font-bold mb-1">Smash Glass</h3>
       <p class="text-xs text-gray-600 mb-3">Pop gentle floating bubbles to unwind and refocus.</p>
-      <button onclick="location.href='bubble-pop.html'"
+      <button onclick="location.href='smachGlass.html'"
         class="px-4 py-1.5 bg-purple-500 text-white rounded-full hover:bg-purple-600 transition text-sm">
         Play
       </button>
