--- a/games.html
+++ b/games.html
@@ -31,81 +31,73 @@
   <!-- Games Grid -->
   <main class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 px-5 pb-12 flex-grow">
 
-    <!-- GAME CARD TEMPLATE -->
-
-    <!-- Image Puzzle -->
-    <div
-      class="bg-white/50 backdrop-blur-md rounded-2xl shadow-lg p-5 flex flex-col items-center text-center hover:scale-105 transition duration-300">
-      <div class="text-5xl mb-3">🧩</div>
-      <h3 class="text-base font-bold mb-1">Image Puzzle</h3>
-      <p class="text-xs text-gray-600 mb-3">Rearrange the pieces to complete calming visuals.</p>
-      <button onclick="location.href='puzzle.html'"
-        class="px-4 py-1.5 bg-purple-500 text-white rounded-full hover:bg-purple-600 transition text-sm">
-        Play
-      </button>
-    </div>
-
-    <!-- Mind Maze -->
+    <!-- 1. Mind Maze -->
     <div
       class="bg-white/50 backdrop-blur-md rounded-2xl shadow-lg p-5 flex flex-col items-center text-center hover:scale-105 transition duration-300">
       <div class="text-5xl mb-3">🧠</div>
       <h3 class="text-base font-bold mb-1">Mind Maze</h3>
-      <p class="text-xs text-gray-600 mb-3">Guide your way through glowing paths of calm focus.</p>
+      <p class="text-xs text-gray-600 mb-3">Navigate glowing paths and boost your focus.</p>
       <button onclick="location.href='mindMaze.html'"
         class="px-4 py-1.5 bg-purple-500 text-white rounded-full hover:bg-purple-600 transition text-sm">
         Play
       </button>
     </div>
 
-    <!-- Zen Drawing Pad -->
+    <!-- 2. Quick Memory Match -->
+    <div
+      class="bg-white/50 backdrop-blur-md rounded-2xl shadow-lg p-5 flex flex-col items-center text-center hover:scale-105 transition duration-300">
+      <div class="text-5xl mb-3">🟦</div>
+      <h3 class="text-base font-bold mb-1">Quick Memory Match</h3>
+      <p class="text-xs text-gray-600 mb-3">Watch, remember, and repeat the pattern to level up.</p>
+      <button onclick="location.href='quickMemory.html'"
+        class="px-4 py-1.5 bg-purple-500 text-white rounded-full hover:bg-purple-600 transition text-sm">
+        Play
+      </button>
+    </div>
+
+    <!-- 3. Zen Drawing Pad -->
     <div
       class="bg-white/50 backdrop-blur-md rounded-2xl shadow-lg p-5 flex flex-col items-center text-center hover:scale-105 transition duration-300">
       <div class="text-5xl mb-3">🎨</div>
       <h3 class="text-base font-bold mb-1">Zen Drawing Pad</h3>
-      <p class="text-xs text-gray-600 mb-3">Express yourself freely on a flowing, meditative canvas.</p>
+      <p class="text-xs text-gray-600 mb-3">Draw freely on a soft, relaxing digital canvas.</p>
       <button onclick="location.href='Drawing.html'"
         class="px-4 py-1.5 bg-purple-500 text-white rounded-full hover:bg-purple-600 transition text-sm">
         Play
       </button>
     </div>
 
-    <!-- Bubble Pop -->
+    <!-- 4. Image Puzzle -->
     <div
       class="bg-white/50 backdrop-blur-md rounded-2xl shadow-lg p-5 flex flex-col items-center text-center hover:scale-105 transition duration-300">
+      <div class="text-5xl mb-3">🧩</div>
+      <h3 class="text-base font-bold mb-1">Image Puzzle</h3>
+      <p class="text-xs text-gray-600 mb-3">Rearrange the pieces to complete the relaxing picture.</p>
+      <button onclick="location.href='puzzle.html'"
+        class="px-4 py-1.5 bg-purple-500 text-white rounded-full hover:bg-purple-600 transition text-sm">
+        Play
+      </button>
+    </div>
 
+    <!-- 5. Smash Glass -->
+    <div
+      class="bg-white/50 backdrop-blur-md rounded-2xl shadow-lg p-5 flex flex-col items-center text-center hover:scale-105 transition duration-300">
       <div class="text-5xl mb-3">💥</div>
-
       <h3 class="text-base font-bold mb-1">Smash Glass</h3>
-
-      <p class="text-xs text-gray-600 mb-3">
-        Tap to shatter the glass and release your anger safely.
-      </p>
-
+      <p class="text-xs text-gray-600 mb-3">Tap to shatter glass and release quick stress.</p>
       <button onclick="location.href='smachGlass.html'"
         class="px-4 py-1.5 bg-purple-500 text-white rounded-full hover:bg-purple-600 transition text-sm">
         Play
       </button>
     </div>
 
-    <!-- Hue Flow -->
+    <!-- 6. Piano Keys -->
     <div
       class="bg-white/50 backdrop-blur-md rounded-2xl shadow-lg p-5 flex flex-col items-center text-center hover:scale-105 transition duration-300">
-      <div class="text-5xl mb-3">🌈</div>
-      <h3 class="text-base font-bold mb-1">Hue Flow</h3>
-      <p class="text-xs text-gray-600 mb-3">Follow shifting colors to train focus and awareness.</p>
-      <button onclick="location.href='hue-flow.html'"
-        class="px-4 py-1.5 bg-purple-500 text-white rounded-full hover:bg-purple-600 transition text-sm">
-        Play
-      </button>
-    </div>
-
-    <!-- Calm Grove -->
-    <div
-      class="bg-white/50 backdrop-blur-md rounded-2xl shadow-lg p-5 flex flex-col items-center text-center hover:scale-105 transition duration-300">
-      <div class="text-5xl mb-3">🌿</div>
-      <h3 class="text-base font-bold mb-1">Calm Grove</h3>
-      <p class="text-xs text-gray-600 mb-3">Grow virtual trees that respond to your calm clicks.</p>
-      <button onclick="location.href='calm-grove.html'"
+      <div class="text-5xl mb-3">🎹</div>
+      <h3 class="text-base font-bold mb-1">Calm Piano Keys</h3>
+      <p class="text-xs text-gray-600 mb-3">Tap smooth piano notes and create your own melody.</p>
+      <button onclick="location.href='piano.html'"
         class="px-4 py-1.5 bg-purple-500 text-white rounded-full hover:bg-purple-600 transition text-sm">
         Play
       </button>
